# videolens

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SKILL.md  app.py  install.sh  pyproject.toml  railway.json  uninstall.sh
docs/specs/: 2026-07-19-standard-skill-repo-design.md
hermes-skill/: SKILL.md
hermes-skill/references/: douyin-extraction.md
skills/videolens/: SKILL.md
skills/videolens/assets/: prompt-templates.md
skills/videolens/references/: douyin-extraction.md  whisper-setup.md  youtube-bilibili.md
skills/videolens/scripts/: adaptive_frames.sh  analyze.sh  validate_env.sh
src/videolens/: cache.py  cli.py  config.py  mcp_server.py  pipeline.py  types.py
src/videolens/analysis/: __init__.py  analyze_timeline.py  ask_question.py  enhance_prompt.py
src/videolens/analysis/modes/: __init__.py  bug.py  content.py  general.py  meeting.py  privacy.py  product_demo.py  production_recipe.py  tutorial.py  ux.py
src/videolens/outputs/: __init__.py  write_json.py  write_markdown.py  write_pdf.py
src/videolens/processors/: browser_capture.py  build_timeline.py  describe_frames.py  download.py  extract_audio.py  extract_frames.py  extract_metadata.py  transcribe_audio.py
src/videolens/resolvers/: __init__.py  resolve_source.py
src/videolens/web/: app.py
tests/: test_production_recipe_mode.py
