[project]
name = "videolens"
version = "0.1.0"
description = "VideoLens Skill 仓库 — 通用视频智能分析技能（Hermes / Trae / Anthropic 三生态兼容）"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
    { name = "Jeramy Ratelle", email = "ratelle.ja@gmail.com" }
]
keywords = ["video", "transcription", "ocr", "openai", "ai-agents", "mcp", "video-intelligence", "skill"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific :: Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.15.0",
    "pydantic>=2.9.0",
    "openai>=1.55.0",
    "yt-dlp>=2024.12.0",
    "httpx>=0.27.0",
    "rich>=13.9.0",
    "faster-whisper>=1.2.1",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
]
capture = [
    "playwright>=1.45.0",
]

[project.urls]
Homepage = "https://github.com/shadoprizm/videolens"
Repository = "https://github.com/shadoprizm/videolens"
Issues = "https://github.com/shadoprizm/videolens/issues"

[project.scripts]
videolens = "videolens.cli:app"
videolens-mcp = "videolens.mcp_server:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
